# pix-challenge-nubank-client

./: ASSUMPTIONS.md  Dockerfile  Makefile  README.md  apply_validation_patch.py  compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
pix_client/: __init__.py  cli.py  client.py  config.py  exceptions.py  models.py
tests/: fixtures.json  test_client.py  test_client.py.old
