[project]
name = "pix_client"
version = "0.1.0"
description = "Cliente Pix (desafio Nubank) – minimal runtime deps"
authors = [{ name = "Seu Nome", email = "voce@example.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["httpx>=0.27.0"]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.4",
    "mypy>=1.10.0",
    "build>=1.2.1",
]

[tool.ruff]
line-length = 100
