[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "pix_client"
version         = "1.0.1"
description     = "Cliente Pix (desafio Nubank) – minimal runtime deps"
authors         = [{ name = "Carlos Brito", email = "britocarlos21@gmail.com" }]
readme          = "README.md"
requires-python = ">=3.12"

dependencies = [
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
]

# ------------------------- CLI -------------------------
[project.scripts]
pix = "pix_client.cli:app"
# -------------------------------------------------------

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.4",
    "mypy>=1.10.0",
    "build>=1.2.1",
    "twine>=6.1.0",
    "python-dotenv>=1.0.1", 
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
files = ["pix_client", "tests"]
exclude = ["tests/_data"]

[tool.setuptools]
packages = ["pix_client"]
